# rust-binance-pricing

./: Cargo.toml  main  nb.ipynb  pyproject.toml  visual.ipynb  ws_test.py
logs/: app.log.2025-11-22-13  app.log.2025-12-05-21
python_sql/: depth.sql
sql/: create_db.psql  create_db.sql  create_pricing_table.psql  create_tables.sql
src/: data_manip.rs  db_controller.rs  db_controllers.rs  handler.rs  main.rs  manip.rs  types.rs  utils.rs
