[package]
name = "rust-binance-pricing"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.23", features = ["native-tls-vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
url = "2.5.7"
chrono = "0.4.41"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
anyhow = "1.0.99"
polars = { version = "0.50.0", features = ["lazy", "temporal", "dtype-categorical", "cum_agg"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
