[project]
name = "rust-binance-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "polars>=1.33.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
